--- a/Frontend/packages.config
+++ b/Frontend/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.3.4" targetFramework="net45" />
   <package id="Font.Awesome" version="4.3.0.1" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
+  <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
