--- a/Billing/App.config
+++ b/Billing/App.config
@@ -35,4 +35,8 @@
     QueueName="The address to which messages received will be forwarded."
     OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
   <!--<AuditConfig QueueName="audit" />-->
+  <!--<AuditConfig 
+    QueueName="The address to which messages received will be forwarded."
+    OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
+  <AuditConfig QueueName="audit" />
 </configuration>
