--- a/Billing.Events/Billing.Events.csproj
+++ b/Billing.Events/Billing.Events.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{89AC0FF9-C69C-44D3-86DA-D79C9BB9EC8E}</ProjectGuid>
+    <ProjectGuid>{21D14225-DA71-48D7-928E-A608FD608B9F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Shipping.Commands</RootNamespace>
-    <AssemblyName>Shipping.Commands</AssemblyName>
+    <RootNamespace>Billing.Events</RootNamespace>
+    <AssemblyName>Billing.Events</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,8 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerIsValid.cs" />
+    <Compile Include="OrderHasBeenBilled.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SetDeliveryAddress.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
