--- a/Inventory.Commands/Inventory.Commands.csproj
+++ b/Inventory.Commands/Inventory.Commands.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{89AC0FF9-C69C-44D3-86DA-D79C9BB9EC8E}</ProjectGuid>
+    <ProjectGuid>{BF5B1EE5-3639-4705-9C6B-9C1BD4B6F73E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Shipping.Commands</RootNamespace>
-    <AssemblyName>Shipping.Commands</AssemblyName>
+    <RootNamespace>Inventory.Commands</RootNamespace>
+    <AssemblyName>Inventory.Commands</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,8 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckInventory.cs" />
+    <Compile Include="CollectItems.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SetDeliveryAddress.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
