--- a/Ordering.Events/Ordering.Events.csproj
+++ b/Ordering.Events/Ordering.Events.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{89AC0FF9-C69C-44D3-86DA-D79C9BB9EC8E}</ProjectGuid>
+    <ProjectGuid>{3CD8449C-73FC-4DE3-B52E-795AB252A7F7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Shipping.Commands</RootNamespace>
-    <AssemblyName>Shipping.Commands</AssemblyName>
+    <RootNamespace>Ordering.Events</RootNamespace>
+    <AssemblyName>Ordering.Events</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,8 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SetDeliveryAddress.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
