--- a/Frontend/Web.config
+++ b/Frontend/Web.config
@@ -19,6 +19,9 @@
   <UnicastBusConfig>
     <MessageEndpointMappings>
       <add Assembly="Shipping.Commands" Endpoint="shipping" />
+      <add Assembly="Billing.Commands" Endpoint="billing" />
+      <add Assembly="Inventory.Commands" Endpoint="inventory" />
+      <add Assembly="Ordering.Commands" Endpoint="ordering" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
 
