--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -157,8 +157,12 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\ArticlesController.cs" />
+    <Compile Include="Controllers\BillingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\InventoryController.cs" />
+    <Compile Include="Controllers\OrderingController.cs" />
+    <Compile Include="Controllers\ShippingController.cs" />
+    <Compile Include="Controllers\WebshopController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -257,7 +261,9 @@
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -275,9 +281,21 @@
     <Content Include="Scripts\jquery-2.1.3.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Billing.Commands\Billing.Commands.csproj">
+      <Project>{0013c13e-9d99-4d9b-9c33-a801fdc74078}</Project>
+      <Name>Billing.Commands</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{7978E030-194D-4030-A6B4-74C2F9A77941}</Project>
       <Name>Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Inventory.Commands\Inventory.Commands.csproj">
+      <Project>{BF5B1EE5-3639-4705-9C6B-9C1BD4B6F73E}</Project>
+      <Name>Inventory.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Ordering.Commands\Ordering.Commands.csproj">
+      <Project>{648500CC-3454-498A-9641-7DEBE7A9A846}</Project>
+      <Name>Ordering.Commands</Name>
     </ProjectReference>
     <ProjectReference Include="..\Shipping.Commands\Shipping.Commands.csproj">
       <Project>{89AC0FF9-C69C-44D3-86DA-D79C9BB9EC8E}</Project>
